# panoptic_parts

./: .gitignore  .pylintrc  .readthedocs.yml  API.md  EVALUATE_RESULTS.md  GENERATE_RESULTS.md  LABEL_FORMAT.md  LICENSE  MANIFEST.in  README.md  optional.txt  pyproject.toml  requirements.txt  setup.cfg
cityscapes_panoptic_parts/: experimental_visualize.py
cityscapes_panoptic_parts/dataset_v1/: README.md
docs/: requirements.txt
docs/source/: api.rst  api_and_code.rst  conf.py  contact.md  contact.rst  errata_cvpr2021.md  evaluate_results.md  generate_results.md  ground_truth_usage_cases.md  index.rst  installation.md  introduction.md  label_format.md  label_format.rst  scripts.md  visualization.md
panoptic_parts/: __init__.py  merge_to_panoptic.py  panoptic_parts.py
panoptic_parts/cityscapes_panoptic_parts/: README.md  compute_statistics.py  experimental_visualize.py  visualize_from_paths.py  visualize_label_with_legend.py
panoptic_parts/evaluation/: eval_PartPQ.py  experimental_eval_PartIOU.py  experimental_eval_mIoU_parts.py  experimental_eval_segmentation_parts.py  prepare_data.py
panoptic_parts/merging/: merge_to_panoptic.py  merge_to_pps.py  prepare_data.py
panoptic_parts/pascal_panoptic_parts/: experimental_visualize.py  save_visualized_labels.py  visualize_from_paths.py
panoptic_parts/specs/: dataset_spec.py  eval_spec.py  populate_ppp_official_evalspec.py
panoptic_parts/utils/: [MOVE]convert_annotations_v1_to_v2.py  format.py  (+7 more)
pascal_panoptic_parts/: experimental_visualize.py  visualize.py
utils/: format.py  utils.py  visualization.py
(+83 files in other folders)
