[metadata]
name = panoptic_parts
version = 2.0rc5
description = Panoptic Parts datasets
long_description = file: README.md
long_description_content_type = text/markdown
author = Panoptic Parts team
author_email = panoptic.parts@outlook.com
maintainer = Panagiotis Meletis
maintainer_email = panoptic.parts@outlook.com
url = https://github.com/pmeletis/panoptic_parts
project_urls =
    Documentation = https://panoptic-parts.readthedocs.io
    Bug Tracker = https://github.com/pmeletis/panoptic_parts/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    numpy>=1.15
    Pillow>=8.0
    scipy>=1.4
    ruamel.yaml>=0.15
    matplotlib>=3.3.0
include_package_data = True

[options.extras_require]
MERGING = tqdm

[options.entry_points]
console_scripts =
    pp_merge_to_pps = panoptic_parts.merging.merge_to_pps:main [MERGING]
    pp_merge_to_panoptic = panoptic_parts.merging.merge_to_panoptic:main [MERGING]
    pp_visualize_label_with_legend = panoptic_parts.visualization.visualize_label_with_legend:main
